# webinar-intel

./: .gitignore  BRIEFS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: analyze.yml  brief.yml  ci.yml
briefs/: zenity-ama-inside-the-owasp-state-of-agentic-ai-security-governance.md  zenity-jk1z7z6zlw0.md
briefs/candidates/: jK1Z7Z6zlW0.md
context-vault/: corrections.md
context-vault/competitors/zenity/: corrections.md  history.md  patterns.md  profile.md  talk-tracks.md
context-vault/us/: counters.md  identity.md  messaging.md  patterns.md
docs/: CASE_STUDY.md  GDOCS_FORMATTING.md
profiles/: us.md  zenity.md
src/webinar_intel/: cli.py
src/webinar_intel/adapters/: llm.py  youtube.py
src/webinar_intel/core/: models.py  vault.py
src/webinar_intel/pipeline/: __init__.py  clean.py  detect.py  learn.py
src/webinar_intel/render/: briefs_log.py  gdocs.py  markdown.py
tests/: test_gdocs.py  test_pipeline.py  test_render.py  test_youtube.py
transcripts/: jK1Z7Z6zlW0.json
