[project]
name = "webinar-intel"
version = "0.1.0"
description = "URL-in, competitive-brief-out: analyze competitor webinars on YouTube with a PMM lens"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Julien Katzenmaier" }]
dependencies = [
    "anthropic>=0.40.0",
    "youtube-transcript-api>=0.6.2",
    "pydantic>=2.9.0",
    "typer>=0.12.5",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.7.0"]

[project.scripts]
webinar-intel = "webinar_intel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webinar_intel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
